WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16939
Repaint bug on Text selection in foreignObject
https://bugs.webkit.org/show_bug.cgi?id=16939
Summary
Repaint bug on Text selection in foreignObject
Oliver Hunt
Reported
2008-01-19 02:31:04 PST
build webkit with foriegnObject support build-webkit --svg-foreign-object then try selecting the text in the linked url
Attachments
Initial patch
(472.84 KB, patch)
2010-02-12 13:39 PST
,
Nikolas Zimmermann
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2009-05-03 15:42:58 PDT
This is not fixed in Safari 4, but might be fixed in tip of tree.
Eric Seidel (no email)
Comment 2
2009-05-03 16:59:02 PDT
Turns out I have a fix for this locally. Now I just need to find a way to turn this into a test case.
Dirk Schulze
Comment 3
2009-12-30 12:26:35 PST
No problems here. It's not possible to start the slection on top of the shape, but works around it. The repaint works. Can we close this bug?
Dirk Schulze
Comment 4
2009-12-30 12:26:59 PST
Link-update:
http://www.croczilla.com/bits_and_pieces/svg/samples/foreign1/foreign1.xml
Dirk Schulze
Comment 5
2009-12-30 13:25:20 PST
***
Bug 18889
has been marked as a duplicate of this bug. ***
Nikolas Zimmermann
Comment 6
2010-01-02 13:28:36 PST
I still see a bug, open the linked URL, and start selecting the text from top left, then move to the bottom right, triggers following assertion: ASSERTION FAILED: useTransforms (/Users/nikolaszimmermann/Coding/WebKit/WebCore/rendering/RenderSVGRoot.cpp:273 virtual void WebCore::RenderSVGRoot::mapLocalToContainer(WebCore::RenderBoxModelObject*, bool, bool, WebCore::TransformState&) const)
Nikolas Zimmermann
Comment 7
2010-02-12 13:39:50 PST
Created
attachment 48661
[details]
Initial patch
Dirk Schulze
Comment 8
2010-02-12 14:09:42 PST
Comment on
attachment 48661
[details]
Initial patch r=me
Nikolas Zimmermann
Comment 9
2010-02-12 14:19:20 PST
Landed in
r54735
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug