        Reviewed by George Staikos.

Simplify RenderForeignObject::paint and fix a repaint bug.
        Paint now calls applyTransformToPaintInfo which correctly transforms the damage rect.
        https://bugs.webkit.org/show_bug.cgi?id=16939

        * rendering/RenderForeignObject.cpp:
        (WebCore::RenderForeignObject::paint):

Canonical link: https://commits.webkit.org/35205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43173 268f45cc-cd09-0410-ab3c-d52691b4dbfc